# shroud-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  USAGE.md  changes.md
.github/workflows/: ci.yml
circuits/: commitment.circom  merkleTree.circom  mimc.circom  package.json  withdraw.circom
circuits/test/: withdraw_test.js
circuits/withdraw_cpp/: withdraw.cpp
circuits/withdraw_js/: withdraw.wasm
cli/: README.md  cli_test_secret.json  package.json  recover_commitments.js  recover_events.js  tsconfig.json
cli/src/: blockchain.ts  crypto.ts  deposit.ts  index.ts  withdraw.ts
cli/test/: integration.test.ts
contracts/: Cargo.toml  Odra.toml  build.rs  casper_livenet.env  casper_livenet.env.example  deployment_address.txt  rust-toolchain.toml
contracts/src/: deposit.rs  deposit_session.rs  lib.rs  merkle.rs  merkle_tree.rs  mimc.rs  shroud_protocol.rs  tests.rs  verifier.rs  verifier_mock.rs  vk.rs  withdraw.rs
contracts/tests/: livenet_deploy.rs  repro.rs
contracts/wasm/: ShroudProtocol.wasm
docs/: DEVELOPER.md
frontend/: .env.example  check-sdk.js  debug_root.mjs  deploy_sample.json  jest.config.js  mimc_test.mjs  package.json  proxy_test_output.txt  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: deposit_session.wasm
frontend/src/components/: Deposit.tsx  Footer.tsx  Navbar.tsx  Withdraw.tsx
frontend/src/context/: CommitmentContext.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: _app.tsx  docs.tsx  index.tsx  privacy.tsx  statistics.tsx  terms.tsx
frontend/src/pages/api/: proxy.ts
frontend/src/styles/: globals.css
frontend/src/types/: circomlibjs.d.ts
frontend/src/utils/: casper.ts  crypto.test.ts  crypto.ts  mimcTest.ts  requestQueue.ts  signingLock.ts  storage.ts  syncProgress.ts
keys/: public_key_hex
scripts/: build_all.sh  deploy.sh  install_dependencies.sh  setup_circuits.sh  test_all.sh
