[package]
name = "shroud-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.4.0" }

casper-types = { version = "6.1.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64ct = { version = "=1.6.0", default-features = false }
casper-event-standard = { version = "0.7.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-wasm-env = "2.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-livenet-env = "2.4.0"

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
test = false

[[bin]]
name = "shroud_protocol_build_contract"
path = "bin/build_contract.rs"
test = false

[profile.release]
lto = false
codegen-units = 1

